What is done: - Fix hash tag links getting overlapped by anchor. - Exclude '.idea' and '.git*' to be watched by jekyll server - Add new article 'What is Combinations and Permutations'

--- a/css/main.scss
+++ b/css/main.scss
@@ -199,7 +199,15 @@ $on-laptop:        800px;
     }
 }
 
-
+// Added by Shendy
+.post-content > h1::before, .post-content > h2::before, .post-content > h3::before, .post-content > h4::before, .post-content > h5::before, .post-content > h6::before {
+  display: block;
+  content: " ";
+  margin-top: -60px;
+  height: 60px;
+  visibility: hidden;
+  pointer-events: none;
+}
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
